--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* style.css (NİHAİ DÜZELTİLMİŞ SÜRÜM) */
+/* style.css (NİHAİ TEMİZ VERSİYON) */
 
 /* Genel Ayarlar */
 html {
@@ -72,10 +72,8 @@ html {
 }
 
 /* ---------------------------------------------------- */
-/* 3. KARTLAR İÇİN NEON GÖLGE EFEKTİ (TILT JS İLE ÇALIŞIR) */
+/* 3. KARTLAR İÇİN NEON GÖLGE EFEKTİ (Manuel transition YOK) */
 /* ---------------------------------------------------- */
-
-/* Tüm kartlar için geçerli olacak (Tilt JS'in geçişini bozmamak için burada 'transition' KULLANILMADI) */
 
 /* Kırmızı (Red) kartlar için varsayılan Neon gölge */
 .w-full:hover,
